2004-05-28  Pierre Humblet  <Pierre.Humblet@ieee.org>

	* fhandler_disk_file.cc (fhandler_disk_file::fchmod): Only try to open
	the file if it uses an acl.

2004-05-28  Pierre Humblet  <Pierre.Humblet@ieee.org>

	* path.cc (chdir): Always use the normalized_path as posix_cwd, except
	if it starts with a drive.

2004-05-25  Christopher Faylor  <cgf@alum.bu.edu>

	* winbase.h: Semi-revert previous patch as it caused strange behavior.
	Use syntax similar to that recommended in mingw-dvlpr.

2004-05-25  Christopher Faylor  <cgf@alum.bu.edu>

	* include/cygwin/version.h: Bump DLL minor number to 11.

2004-05-25  Christopher Faylor  <cgf@alum.bu.edu>

	* winbase.h: Add proper attributions for memory operands throughout.

2004-05-24  Christopher Faylor  <cgf@alum.bu.edu>

	* include/cygwin/version.h: Bump api minor version number.

2004-05-24  Christopher Faylor  <cgf@alum.bu.edu>

	* cygwin.din: Export atoll.

2004-05-20  Christopher Faylor  <cgf@alum.bu.edu>

	* tty.cc (tty_list::allocate_tty): Leave tty_mutex armed on successful
	return from !with_console
	* fhandler_tty.cc (fhandler_pty_master::open): Release tty_mutex here
	after all initialization is done.

2004-05-17  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (getgrgid_r): Replace struct group by struct __group32 in
	argument definition.
	(getgrnam_r): Ditto.

2004-05-17  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din: Add symbols flockfile, ftrylockfile, funlockfile,
	getgrgid_r, getgrnam_r and getlogin_r.
	* grp.cc (getgrgid_r): New function.
	(getgrnam_r): Ditto.
	* syscalls.cc (flockfile): Ditto.
	(ftrylockfile): Ditto.
	(funlockfile): Ditto.
	* sysconf.cc (sysconf): Return LOGIN_NAME_MAX in case of
	_SC_LOGIN_NAME_MAX.
	* thread.cc (__cygwin_lock_trylock): Define int.  Return value from
	call to pthread_mutex_trylock.
	* uinfo.cc (getlogin_r): New function.
	* include/limits.h: Define LOGIN_NAME_MAX.
	* include/cygwin/version.h: Bump API minor number.