@@ -1,3 +1,9 @@
+2004-05-30  Pierre Humblet <pierre.humblet@ieee.org>
+
+	* path.cc (mount_info::add_item): Make sure native path has drive 
+	or UNC form. Call normalize_xxx_path instead of [back]slashify.
+	Remove test for double slashes. Reorganize to always debug_print. 
+
 2004-05-28  Pierre Humblet  <Pierre.Humblet@ieee.org>
 
 	* fhandler_disk_file.cc (fhandler_disk_file::fchmod): Only try to open
